--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -378,7 +378,18 @@ Next, call the `useSignAndExecuteTransaction` hook in your component, which prov
 
 ```tsx
 export function CreateCounter(props: { onCreated: (id: string) => void }) {
-  const { mutate: signAndExecute } = useSignAndExecuteTransaction();
+  const { mutate: signAndExecute } = useSignAndExecuteTransaction({
+    execute: async ({ bytes, signature }) =>
+      await suiClient.executeTransactionBlock({
+        transactionBlock: bytes,
+        signature,
+        options: {
+          // Raw effects are required so the effects can be reported back to the wallet
+          showRawEffects: true,
+          showEffects: true,
+        },
+      }),
+  });	
   return (
     <Container>
       <Button
@@ -411,18 +422,11 @@ function create() {
   signAndExecute(
     {
       transaction: tx,
+      chain: 'sui:testnet',
     },
     {
-      onSuccess: async ({ digest }) => {
-        const tx = await suiClient.waitForTransaction({
-          digest,
-          options: {
-            showEffects: true,
-          },
-        });
-
-        // The first created object in this Transaction should be the new Counter
-        const objectId = tx.effects?.created?.[0]?.reference?.objectId;
+      onSuccess: (result) => {
+        const objectId = result.effects?.created?.[0]?.reference?.objectId;
         if (objectId) {
           props.onCreated(objectId);
         }
@@ -432,7 +436,7 @@ function create() {
 }
 ```
 
-You now have a functional component that can create a new `Counter` object, but if you use it as is, you might run into some consistency issues where you successfully execute the `Transaction`, but the data isn't yet indexed to read from an RPC node. To ensure the `Transaction` is available, you can use the `waitForTransaction` method of `SuiClient`.
+You now have a functional component that can create a new `Counter` object, and because the `showRawEffects` and `showEffects` options are toggled on, the transaction results ensure finality. The `SuiClient` is used to set this up.
 To get an instance of `SuiClient`, you can use the `useSuiClient` hook from dApp Kit:
 
 ```tsx
@@ -440,44 +444,20 @@ import { useSignAndExecuteTransaction, useSuiClient } from '@mysten/dapp-kit';
 
 export function CreateCounter(props: { onCreated: (id: string) => void }) {
   const suiClient = useSuiClient();
-  const { mutate: signAndExecute } = useSignAndExecuteTransaction();
+  const { mutate: signAndExecute } = useSignAndExecuteTransaction({
+    execute: async ({ bytes, signature }) =>
+      await suiClient.executeTransactionBlock({
+        transactionBlock: bytes,
+        signature,
+        options: {
+          // Raw effects are required so the effects can be reported back to the wallet
+          showRawEffects: true,
+          showEffects: true,
+        },
+      }),
+  });	
 
   //...
-}
-```
-
-Now you can use the `suiClient` in your `create` function to wait until the `Transaction` is indexed:
-
-```tsx
-function create() {
-  const tx = new Transaction();
-  tx.moveCall({
-    arguments: [],
-    target: `${COUNTER_PACKAGE_ID}::counter::create`,
-  });
-
-  signAndExecute(
-    {
-      transaction: tx,
-    },
-    {
-      onSuccess: ({ digest }) => {
-        suiClient
-          .waitForTransaction({
-            digest,
-            options: {
-              showEffects: true,
-            },
-          })
-          .then((tx) => {
-            const objectId = tx.effects?.created?.[0]?.reference?.objectId;
-            if (objectId) {
-              props.onCreated(objectId);
-            }
-          });
-      },
-    },
-  );
 }
 ```
 
@@ -653,10 +633,9 @@ export function Counter({ id }: { id: string }) {
         transaction: tx,
       },
       {
-        onSuccess: async (tx) => {
-          await suiClient.waitForTransaction({ digest: tx.digest });
-          refetch();
-        },
+        onSuccess: async () => {
+					await refetch();
+				},
       },
     );
   }
