--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -3,7 +3,7 @@ title: Distributed Counter
 hide_table_of_contents: true
 ---
 
-This example walks you through building a basic distributed counter app, covering the full end-to-end flow of building your Sui Move module and connecting it your React Sui Dapp. The app allows you to create counters that anyone can increment, but only the owner can reset. 
+This example walks you through building a basic distributed counter app, covering the full end-to-end flow of building your Sui Move module and connecting it your React Sui dApp. The app allows you to create counters that anyone can increment, but only the owner can reset. 
 
 The guide is split into two parts:
 
