--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -7,7 +7,7 @@ This example walks you through building a basic distributed counter app, coverin
 
 The guide is split into two parts:
 
-1. [Smart Contracts](#smart-contracts): The Move code set ups the `Counter` structure and logic.
+1. [Smart Contracts](#smart-contracts): The Move code that sets up the `Counter` structure and logic.
 1. [Frontend](#frontend): A UI that enables users to create, increment, and reset `Counter` objects.
 
 ## What you need
