--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -115,7 +115,7 @@ module counter::counter {
 
 {@include: ../../../snippets/initialize-sui-client-cli.mdx}
 
-Next, configure the Sui CLI to use `testnet` as the active environment, as well. If you haven't already set up a `testnet` environment you can do so by running the following command in a terminal or console:
+Next, configure the Sui CLI to use `testnet` as the active environment, as well. If you haven't already set up a `testnet` environment, do so by running the following command in a terminal or console:
 
 ```bash
 sui client new-env --alias testnet --rpc https://fullnode.testnet.sui.io:443
