--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -280,7 +280,7 @@ To turn this into a complete dApp, you need to [create a frontend](#frontend).
 
 ## Frontend {#frontend}
 
-In this final part of the app example, you will build a frontend (UI) that allows end-users to create, increment, and reset `Counter` objects.
+In this final part of the app example, you build a frontend (UI) that allows end users to create, increment, and reset `Counter` objects.
 
 
 :::note
