--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -304,7 +304,7 @@ yarn create @mysten/dapp --template react-e2e-counter
 Before getting started, make sure you have:
 
 - [Deployed the complete `counter` Move module](#smart-contracts) and understand its design.
-- Installed [`pnpm`](https://pnpm.io/installation) or [`yarn`](https://classic.yarnpkg.com/lang/en/docs/install/#mac-stable) as it will be used as the package manager.
+- Installed [`pnpm`](https://pnpm.io/installation) or [`yarn`](https://classic.yarnpkg.com/lang/en/docs/install/#mac-stable) to use as the package manager.
 
 :::tip Additional resources
 
