Addressed suggestion: removed `will`

--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -18,7 +18,7 @@ Before getting started, make sure you have:
 
 ## Smart contracts {#smart-contracts}
 
-In this part of the guide, you will write the Move contracts that create, increment, and reset counters. The first step is to [set up a Move package](../first-app/write-package.mdx) for storing your Move modules.
+In this part of the guide, you write the Move contracts that create, increment, and reset counters. The first step is to [set up a Move package](../first-app/write-package.mdx) for storing your Move modules.
 
 :::note
 
