--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -324,7 +324,7 @@ The UI design consists of two parts:
 
 ### Scaffold a new app
 
-The first step is to set up the Client App. Run the following command to scaffold a new app.
+The first step is to set up the client app. Run the following command to scaffold a new app.
 
 ```bash
 pnpm create @mysten/dapp --template react-client-dapp
