added link to source code

--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -10,6 +10,12 @@ The guide is split into two parts:
 1. [Smart Contracts](#smart-contracts): The Move code that sets up the `Counter` structure and logic.
 1. [Frontend](#frontend): A UI that enables users to create, increment, and reset `Counter` objects.
 
+:::tip Additional resources
+
+[Example source code](https://github.com/MystenLabs/sui/blob/c617f8dced6c61b7c2070a51999bc202d43f7375/examples/distributed-counter)
+
+:::
+
 ## What you need
 
 Before getting started, make sure you have:
