add instruction for microsoft

--- a/docs/content/guides/developer/cryptography/zklogin-integration/developer-account.mdx
+++ b/docs/content/guides/developer/cryptography/zklogin-integration/developer-account.mdx
@@ -180,6 +180,26 @@ _Go to Settings_
 
 </TabItem>
 
+<TabItem label="Microsoft" value="microsoft">
+
+1. Register and sign in to [admin center](https://entra.microsoft.com/). Go to **Applications** then **App registrations** tab on the left. Create application name, select "supported account types" and set redirect URL, then click "Register".
+
+	![1](../../../../concepts/cryptography/images/zklogin-microsoft1.png "Click on App registrations")
+	
+	*This is where you can create application*
+
+1. In "Authentictation" tab, select "ID tokens" for "Implicit grant and hybrid flows" and save.
+
+	![1](../../../../concepts/cryptography/images/zklogin-microsoft2.png "Enable ID tokens")
+	
+	*This is where you enable ID tokens*
+1. Client ID can be found in "Overview" tab.
+
+	![1](../../../../concepts/cryptography/images/zklogin-microsoft3.png "Find Client ID")
+	
+	*This is where you find client ID*
+</TabItem>
+
 </Tabs>
 
 ## Related links
